# ghscaff

./: .gitignore  Cargo.toml  README.md  ghscaff-spec.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: apply.rs  main.rs  vault.rs  wizard.rs
src/github/: branches.rs  client.rs  contents.rs  labels.rs  mod.rs  repo.rs  secrets.rs  teams.rs
src/templates/: mod.rs  rust.rs
