[package]
name = "ghscaff"
version = "0.1.0"
edition = "2021"
description = "Interactive CLI wizard for creating and configuring GitHub repositories"
license = "MIT"
repository = "https://github.com/JheisonMB/ghscaff"
keywords = ["github", "cli", "scaffold", "wizard"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ghscaff"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
walkdir = "2"
dirs = "6"
urlencoding = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
