[package]
name = "ghscaff"
version = "0.3.2"
edition = "2021"
description = "Interactive CLI wizard for creating and configuring GitHub repositories"
license = "MIT"
repository = "https://github.com/UniverLab/ghscaff"
keywords = ["github", "cli", "scaffold", "wizard"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ghscaff"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
inquire = "0.7"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
flate2 = "1"
tar = "0.4"
walkdir = "2"
dirs = "6"
urlencoding = "2"
toml = "0.8"
crypto_box = "0.9"
blake2 = "0.10"
xsalsa20poly1305 = "0.9"
whoami = "1"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
